// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insertMarkerlinesToBody fn insert markerline to existed marker-header 1`] = `
"[~] 111 222 333
[?]
<AAA> <BBB> question quesiton
[+]
insert insert insert %000
111 111
[-]
[多了空格1]s
[多了空格2]s
多了空格2.1 多了空格2.1 多了空格2.1
多了空格2.2 多了空格2.2 多了空格2.2

"
`;

exports[`insertMarkerlinesToBody fn insert markerline to existed marker-header 2`] = `
Array [
  Object {
    "comment": undefined,
    "linenumber": 0,
    "marker": Object {
      "key": "[~]",
      "value": "111 222 333",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "noStamp": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "%000",
    "str": " 111 222 333",
  },
  Object {
    "comment": undefined,
    "linenumber": 2,
    "marker": Object {
      "key": "[?]",
      "value": "<AAA> <BBB> question quesiton",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "noStamp": true,
    "oauthor": undefined,
    "poll": true,
    "pollChoices": Array [
      "<AAA>",
      "<BBB>",
    ],
    "src": undefined,
    "stampId": "%001",
    "str": "<AAA> <BBB> question quesiton",
  },
  Object {
    "linenumber": -1,
    "marker": Object {
      "key": "[+]",
      "value": "insert insert insert",
    },
    "new": true,
    "oauthor": undefined,
    "src": undefined,
    "srcStamp": undefined,
    "stampId": "%000",
    "str": "insert insert insert",
  },
  Object {
    "comment": undefined,
    "linenumber": 4,
    "marker": Object {
      "key": "[+]",
      "value": "111 111",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "noStamp": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "%002",
    "str": "111 111",
  },
  Object {
    "comment": undefined,
    "linenumber": 6,
    "marker": Object {
      "key": "[多了空格1]",
      "value": "s",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "noStamp": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "%003",
    "str": "s",
  },
  Object {
    "comment": undefined,
    "linenumber": 7,
    "marker": Object {
      "key": "[多了空格2]",
      "value": "s",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "noStamp": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "%004",
    "str": "s",
  },
]
`;

exports[`updateMarkerlines fn parse new added lines 1`] = `
Array [
  Object {
    "comment": true,
    "linenumber": 1,
    "marker": Object {
      "key": "[?]",
      "value": "inline inline inline",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "noStamp": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "%000",
    "str": " inline inline inline %000",
  },
  Object {
    "broken": true,
    "linenumber": 3,
    "marker": Object {
      "key": "[+]",
      "value": "111 111",
    },
    "nestedCard": undefined,
    "stampId": "%001",
    "str": "111 111 %001",
  },
  Object {
    "comment": undefined,
    "linenumber": 4,
    "marker": Object {
      "key": "[+]",
      "value": "222 222",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "noStamp": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "%000",
    "str": "222 222",
  },
  Object {
    "comment": undefined,
    "linenumber": 6,
    "marker": Object {
      "key": "[-]",
      "value": "333 333",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "noStamp": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "%001",
    "str": "333 333",
  },
]
`;

exports[`updateMarkerlines fn parse swaped lines 1`] = `
Array [
  Object {
    "broken": true,
    "linenumber": 2,
    "marker": Object {
      "key": "[+]",
      "value": "111 111",
    },
    "nestedCard": undefined,
    "stampId": "%001",
    "str": "111 111 %001",
  },
  Object {
    "comment": true,
    "linenumber": 3,
    "marker": Object {
      "key": "[?]",
      "value": "inline inline inline",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "noStamp": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "%000",
    "str": " inline inline inline %000",
  },
]
`;

exports[`updateMarkerlines fn parse text to markerlines 1`] = `
Array [
  Object {
    "inline": true,
    "linenumber": 0,
    "marker": Object {
      "key": "[~]",
    },
  },
  Object {
    "inline": true,
    "linenumber": 1,
    "marker": Object {
      "key": "[=]",
    },
  },
  Object {
    "linenumber": 2,
    "marker": Object {
      "key": "[?]",
    },
  },
  Object {
    "linenumber": 8,
    "marker": Object {
      "key": "[+]",
    },
  },
  Object {
    "inline": true,
    "linenumber": 11,
    "marker": Object {
      "key": "[-]",
    },
  },
  Object {
    "inline": true,
    "linenumber": 12,
    "marker": Object {
      "key": "[?]",
    },
  },
]
`;

exports[`updateMarkerlines fn parse text to markerlines 2`] = `
Array [
  Object {
    "linenumber": 0,
    "marker": Object {
      "key": "[~]",
      "value": "inline 111 inline 111",
    },
    "new": true,
    "noStamp": true,
    "stampId": "%000",
    "str": " inline 111 inline 111",
  },
  Object {
    "linenumber": 1,
    "marker": Object {
      "key": "[=]",
      "value": "inline 222 inline 222",
    },
    "new": true,
    "noStamp": true,
    "stampId": "%001",
    "str": " inline 222 inline 222",
  },
  Object {
    "linenumber": 3,
    "marker": Object {
      "key": "[?]",
      "value": "<AAA> <BBB> poll 111",
    },
    "new": true,
    "noStamp": true,
    "poll": true,
    "pollChoices": Array [
      "<AAA>",
      "<BBB>",
    ],
    "stampId": "%002",
    "str": "<AAA> <BBB> poll 111",
  },
  Object {
    "linenumber": 4,
    "marker": Object {
      "key": "[?]",
      "value": "poll 222 <AAA> <BBB>",
    },
    "new": true,
    "noStamp": true,
    "poll": true,
    "pollChoices": Array [
      "<AAA>",
      "<BBB>",
    ],
    "stampId": "%003",
    "str": "poll 222 <AAA> <BBB>",
  },
  Object {
    "linenumber": 9,
    "marker": Object {
      "key": "[+]",
      "value": "point 111",
    },
    "new": true,
    "noStamp": true,
    "stampId": "%004",
    "str": "point 111",
  },
  Object {
    "linenumber": 10,
    "marker": Object {
      "key": "[+]",
      "value": "point 222",
    },
    "new": true,
    "noStamp": true,
    "stampId": "%005",
    "str": "point 222",
  },
  Object {
    "linenumber": 12,
    "marker": Object {
      "key": "[?]",
      "value": "<CCC> neat reply",
    },
    "neatReply": true,
    "new": true,
    "noStamp": true,
    "pollChoices": Array [
      "<CCC>",
    ],
    "stampId": "%006",
    "str": " <CCC> neat reply",
  },
]
`;
